calling pokemon API with team

--- a/src/front-end/templates/articles/articles.html
+++ b/src/front-end/templates/articles/articles.html
@@ -24,7 +24,7 @@
                     <tr>
                         <td>{{ article.entry_id }}</td>
                         <td>{{ article.feed_id }}</td>
-                        <td>{{ article.title }}</td>
+                        <td><a href="article/{{ article.entry_id }}">{{ article.title }}</a></td>
                         <td>{{ article.published }}</td>
                         <!-- <td>{{ article.content }}</td> -->
                     </tr>
